# cb_orchestrator

./: .gitignore  AGENTS.md  README.md  pyproject.toml
deploy/: cb-orchestrator.env.example
deploy/systemd/: cb-orchestrator.service  cb-orchestrator.timer
docs/: next_trade_workflow.md
src/cb_orchestrator/: calendar_utils.py  cli.py  config.py  nightly.py  nightly_cli.py  notion_sync.py  notion_sync_cli.py  orchestrator.py  planner.py  planner_cli.py  release_consumer.py
tests/: conftest.py  fixture_support.py  test_calendar_utils.py  test_fixture_one_day.py  test_fixture_three_day.py  test_nightly.py  test_notion_sync.py  test_orchestrator.py  test_planner.py
tests/fixtures/planner_notion_one_day/: README.md  cleanup_real_notion.py  run_manual_check.py
tests/fixtures/planner_notion_one_day/provider/calendars/: day.txt
tests/fixtures/planner_notion_one_day/runtime/local_assets/: cb_basic.csv
tests/fixtures/planner_notion_one_day/state/plan_inputs/2026-04-20/: holdings_snapshot.json
tests/fixtures/planner_notion_three_day/: README.md  run_manual_check.py
tests/fixtures/planner_notion_three_day/provider/calendars/: day.txt
tests/fixtures/planner_notion_three_day/runtime/local_assets/: cb_basic.csv
tests/fixtures/planner_notion_three_day/state/: latest.json
tests/fixtures/planner_notion_three_day/state/plan_inputs/2026-04-20/: ranking_snapshot.json
tests/fixtures/planner_notion_three_day/state/plan_inputs/2026-04-21/: holdings_snapshot.json  (+1 more)
tests/fixtures/planner_notion_three_day/state/runs/: 20260421_150716.json  20260422_150716.json
(+2 files in other folders)
