[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cb-orchestrator"
version = "0.1.0"
description = "Thin daily orchestrator for CB Qlib pipeline and cb_online_runtime"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "qjh" }]
license = "MIT"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cb-orchestrator-daily = "cb_orchestrator.cli:main"
cb-orchestrator-nightly-release = "cb_orchestrator.nightly_cli:main"
cb-orchestrator-plan-next-trade = "cb_orchestrator.planner_cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
